        - set LED:2000 [LED:2000 - 1]
          will decrement the value stored in LED:2000

     Note that nested operations are supported as well, such as:
        - send CC USB1 1 [LED:2000 + [LED:2001 + [LED:2002 + LED:2003]]]

     More examples in cfg/tests/runscr5.ngc

     Support operators: + - * / % & | ^


   o number of scanned SRIOs now configurable in .NGC file
     with 'SrioNum <value'

     By default 32 DIN and DOUT shift registers are scanned, which
     result into an update rate of ca. 420 uS on a STM32F4 based core.

     With (for example) 'SrioNum 8' only up to 8 DIN and 8 DOUT SRs will
     be scanned anymore, but the update rate is reduced to ca. 110..120 uS
     (a little bit more than a quarter due to SR handling overhead)
     

    o corrected DebounceCtr parameter (value was not passed to MIOS32)


MIDIbox NG V1.031
~~~~~~~~~~~~~~~~~

   o the STM32F4 variant of the firmware supports USB Host mode!
     See also http://midibox.org/forums/topic/18906-usb-host-support-for-mbhp-core-stm32f4/

   o MIDI clock input ports now disabled by default to avoid feedback loops
     in various setups

   o improved "ain_filter_delay_ms" implementation to support sensors (experimental stage)

   o Covered new use case which allows to transform velocity values of incoming notes.
     See cfg/test/conev_6.ngc
     EVENT_RECEIVER and EVENT_SENDER have to be specified with "key=any", so that any
     key will be received and sent.

   o support for DIN/DOUT emulation on digital IO ports J10A/J10B (LPC17: J10/J28)
     See examples in cfg/test/diocfg_1.ngc and cfg/test/diocfg_2.ngc


MIDIbox NG V1.030
~~~~~~~~~~~~~~~~~

   o increased event pool size to 64k for MBHP_CORE_STM32F4

   o added ain_mode=Switch for AIN and AINSER events.
     Can be used if buttons are connected to analog inputs. The event will send the
     min value if a 30% threshold is reached, and the max value if a 70% threshold
     is reached.